--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2637,6 +2637,7 @@ input, select, textarea {
 		.image img {
 			display: block;
 			border-radius: 4px;
+			max-width: 250px;
 		}
 
 		.image.left, .image.right {
